err/deviceidentifier.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/deviceidentifier'...
Listing './lib/python3.5/site-packages/deviceidentifier/cli'...
Compiling './lib/python3.5/site-packages/deviceidentifier/cli/apple_anumber.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/apple_anumber.py", line 11
    print 'Usage: provide an Apple "A" number for a breakdown of data on it.'
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/apple_identifier.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/apple_identifier.py", line 11
    print 'Usage: provide an Apple identifier for a breakdown of data on it.'
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/apple_idfa.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/apple_idfa.py", line 11
    print 'Usage: provide an Apple IDFA for a breakdown of data on it.'
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/apple_internal_name.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/apple_internal_name.py", line 11
    print 'Usage: provide an Apple internal name for a breakdown of data on it.'
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/apple_model.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/apple_model.py", line 11
    print 'Usage: provide an Apple model for a breakdown of data on it.'
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/apple_serial.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/apple_serial.py", line 11
    print 'Usage: provide an Apple serial for a breakdown of data on it.'
                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/apple_udid.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/apple_udid.py", line 11
    print 'Usage: provide an Apple UDID for a breakdown of data on it.'
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/cdma_meid.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/cdma_meid.py", line 11
    print 'Usage: provide a CDMA MEID for a breakdown of data on it.'
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/enhance_metadata.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/enhance_metadata.py", line 11
    print 'Usage: provide an identifier, a serial number, an internal name, an IMEI and an ICCID'
                                                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/gsma_iccid.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/gsma_iccid.py", line 11
    print 'Usage: provide a GSMA ICCID for a breakdown of data on it.'
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/gsma_imei.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/gsma_imei.py", line 11
    print 'Usage: provide a GSMA IMEI for a breakdown of data on it.'
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/gsma_tac.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/gsma_tac.py", line 11
    print 'Usage: provide a GSMA type allocation code for a breakdown of data on it.'
                                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deviceidentifier/cli/identify_identifier.py'...
***   File "./lib/python3.5/site-packages/deviceidentifier/cli/identify_identifier.py", line 11
    print 'Usage: provide an unknown identifier for a list of potential identities.'
                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/deviceidentifier/util'...
Listing './lib/python3.5/site-packages/deviceidentifier-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/idna'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.12.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
